--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0' 
 
     testImplementation 'org.testng:testng:6.9.10'
 
